--- a/style.css
+++ b/style.css
@@ -590,6 +590,10 @@ body {
     width: 200px;
     text-align: center;
   }
+
+  .scroll-indicator {
+    display: none;
+  }
 }
 
 @media (max-width: 480px) {
